--- a/BankAccount2/BankAccount2.csproj
+++ b/BankAccount2/BankAccount2.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Account.cs" />
     <Compile Include="Client.cs" />
     <Compile Include="Checking.cs" />
     <Compile Include="Options.cs" />
